# symmetrica-feedstock

./: .travis.yml  README.md  conda-forge.yml
recipe/: CMakeLists.txt  bld.bat  build.sh  meta.yaml  test_output.txt
recipe/patches/: unistd.patch
